MonetDB5/src/mal/Tests/tst070.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## parsing operations with multi-assignments
#
#(x,y):= point(z:int);
#(initial:str,surname:str):= getName();
#
!ERROR: 'point' undefined in Admin.main[1]
!ERROR: 'getName' undefined in Admin.main[2]
function Admin.main():int;	# 0  (main:int)
    (x,y):=point(z);	# 1  unknown (x:any)(y:any)<-(z:int)
    (initial,surname):=getName();	# 2  unknown (initial:str)(surname:str)
end main;	# 3  
>